--- a/templates/menu.html
+++ b/templates/menu.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>LONGBOW</title>
 </head>
   <body>
     <header>
       <div class="container">
-        <h1 class="logo">Goonbot Backend</h1>
+        <h1 class="logo">LONGBOW</h1>
         <h1 class="logo">Menu</h1>
           <ul class="menu">
             <li><a href="{{ url_for('system_report') }}">System Report</a></li>
