--- a/templates/menu.html
+++ b/templates/menu.html
@@ -10,8 +10,11 @@
         <h1 class="logo">LONGBOW</h1>
         <h1 class="logo">Menu</h1>
           <ul class="menu">
-            <li><a href="{{ url_for('system_report') }}">System Report</a></li>
-            <li><a href="{{ url_for('login') }}">Login</a></li>
+              <li><a href="{{ url_for('system_report') }}">System Report</a></li>
+              <li><a href="{{ url_for('login') }}">Login</a></li>
+              <li><a href="{{ url_for('characters') }}">Characters</a></li>
+              <li><a href="{{ url_for('systems') }}">Systems</a></li>
+              <li><a href="{{ url_for('report_viewer') }}">Reports</a></li>
           </ul>
       </div>
     </header>
