--- a/templates/characters.html
+++ b/templates/characters.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/main.css') }}">
     <meta charset="UTF-8">
     <title>Characters</title>
 </head>
