--- a/templates/view_report.html
+++ b/templates/view_report.html
@@ -7,7 +7,7 @@
 </head>
     <body>
     <button onclick="history.back()">Go Back</button>
-    System: {{report["system_name"]}} at {{ report["time"] }}
+    <h1> System: {{report["system_name"]}} at {{ report["time"] }}</h1>
     <ul class="menu">
     {%- for player in report["player_ids"] %}
         <li><a href="{{ url_for('character',name = player) }}">{{player}}</a></li>
