--- a/templates/view_system_reports.html
+++ b/templates/view_system_reports.html
@@ -7,7 +7,7 @@
     </head>
     <body>
     <a href="{{ url_for('index') }}">Menu</a>
-    System Report
+    <h1>System Report</h1>
         <ul class="menu">
             {%- for report in reports %}
                 <div class="dropdown">
