--- a/templates/system.html
+++ b/templates/system.html
@@ -3,7 +3,7 @@
 <head>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/main.css') }}">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>{{ system["name"] }}</title>
 </head>
 <body>
 <a href="{{ url_for('index') }}">Menu</a>
@@ -14,19 +14,27 @@
             <li><a href="{{ url_for('character',name = player) }}">{{ player }}:{{ system["common_players"][player] }}</a></li>
     {% endfor %}
 </ul>
+<hr class="rounded">
 <h2>Nearby Jove Observatories</h2>
 <ul>
     {%- for drifter in drifters %}
         <li>{{ sys_data[drifter]["name"] }}</li>
     {% endfor %}
 </ul>
+<hr class="rounded">
 <h2>Max Distance To Observatories: {{ last_dist }} Jumps</h2>
 <form action="{{ url_for('adjust_system_jumps',name = system["name"]) }}" method="post">
     <div class="slidecontainer">
         <input type="range" name="drifter_jumps" min="1" max="8" value={{ last_dist }} class="slider" id="drifter_jumps">
-        <input type="submit">
+        <input type="submit" value="Find">
     </div>
 </form>
-
+<hr class="rounded">
+<h2>Reports</h2>
+<ul>
+    {% for report in reports %}
+            <li><a href="{{ url_for('report',id = report["_id"]) }}">Report At: {{ report["time"] }}</a></li>
+    {% endfor %}
+</ul>
 </body>
 </html>
