--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -2,7 +2,7 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  width: 200px;
+  width: 256px;
   background-color: #f1f1f1;
 }
 body{
@@ -12,12 +12,15 @@ li a {
   display: block;
   color: #000;
   padding: 8px 16px;
+  width: 224px;
   text-decoration: none;
 }
 
 /* Change the link color on hover */
 li a:hover {
   background-color: #555;
+  padding: 8px 16px;
+  width: 224px;
   color: red;
 }
 
@@ -40,4 +43,59 @@ li a:hover {
 
 .dropdown:hover .dropdown-content {
   display: block;
+}
+
+.flip-card {
+  background-color: transparent;
+  width: 256px;
+  height: 256px;
+  perspective: 1000px;
+}
+
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+
+.flip-card-back {
+  background-color: #697763;
+  color: white;
+  transform: rotateY(180deg);
+}
+.container {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+.centered {
+  position: absolute;
+  top: 75%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
