WIP Fancy UI v2

--- a/templates/character.html
+++ b/templates/character.html
@@ -6,7 +6,7 @@
     <title>{{character['_id']}}</title>
 </head>
     <body>
-        <a href="{{ url_for('index') }}">Menu</a>
+        <a class="menu_button" href="{{ url_for('index') }}">Menu</a>
         <button onclick="history.back()">Go Back</button>
         <br>
         <img src="{{ "https://images.evetech.net/characters/" + character['name']|string+ "/portrait?size=256" }}" alt={{character['_id']}}>
