--- a/templates/character_fancy.html
+++ b/templates/character_fancy.html
@@ -6,7 +6,7 @@
     <title>{{character['_id']}}</title>
 </head>
 <body>
-<a href="{{ url_for('index') }}">Menu</a>
+<a class="menu_button" href="{{ url_for('index') }}">Menu</a>
 <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
