--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -84,7 +84,7 @@ li a:hover {
 
 
 .flip-card-back {
-  background-color: #697763;
+  background-color: #555;
   color: white;
   transform: rotateY(180deg);
 }
@@ -98,4 +98,44 @@ li a:hover {
   top: 75%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+input[type=text]{
+  background-color: #ffffff;
+}
+input[type=text]:focus {
+  background-color: #aaaaaa;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+textarea {
+  width: 30%;
+  height: 150px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  background-color: #ffffff;
+  font-size: 16px;
+  resize: none;
+}
+textarea:focus {
+  width: 30%;
+  height: 150px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  background-color: #aaaaaa;
+  font-size: 16px;
+  resize: none;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.menu_button{
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  width: 224px;
+  text-decoration: none;
+}
+.menu_button:hover{
+  background-color: #555;
+  padding: 8px 16px;
+  width: 224px;
+  color: red;
 }
