--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -9,6 +9,7 @@ body{
   font-size: 2vmin;
 }
 li a {
+  background-color: #aaaaaa;
   display: block;
   color: #000;
   padding: 8px 16px;
@@ -16,12 +17,12 @@ li a {
   text-decoration: none;
 }
 
-/* Change the link color on hover */
 li a:hover {
   background-color: #555;
   padding: 8px 16px;
   width: 224px;
   color: red;
+  transition: all 0.25s ease;
 }
 
 .dropdown {
@@ -65,6 +66,8 @@ li a:hover {
 
 .flip-card:hover .flip-card-inner {
   transform: rotateY(180deg);
+  z-index: 1001;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
 
@@ -74,6 +77,8 @@ li a:hover {
   height: 100%;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+
 }
 
 
@@ -84,7 +89,7 @@ li a:hover {
 
 
 .flip-card-back {
-  background-color: #555;
+  background-color: #aaaaaa;
   color: white;
   transform: rotateY(180deg);
 }
@@ -138,4 +143,29 @@ textarea:focus {
   padding: 8px 16px;
   width: 224px;
   color: red;
+}
+.navbar {
+  overflow: hidden;
+  position: fixed;
+  background-color: #aaaaaa;
+  z-index: 1000;
+  top: 0;
+  width: 100%;
+}
+.navbar a {
+  float: left;
+  display: block;
+  color: #000;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.navbar a:hover {
+  background-color: #555;
+  color: red;
+}
+
+.main {
+  margin-top: 50px;
 }
