--- a/templates/characters_fancy.html
+++ b/templates/characters_fancy.html
@@ -6,7 +6,16 @@
     <title>Characters</title>
 </head>
 <body>
-<a href="{{ url_for('index') }}">Menu</a>
+    <header>
+      <div class="navbar">
+              <a href="{{ url_for('menu') }}">Menu</a>
+              <a href="{{ url_for('login') }}">Login</a>
+              <a href="{{ url_for('system_report') }}">System Report</a>
+              <a href="{{ url_for('systems') }}">Systems</a>
+              <a href="{{ url_for('report_viewer') }}">Reports</a>
+      </div>
+    </header>
+    <div class="main">
 {%- for character in character_list %}
 <div class="flip-card">
   <div class="flip-card-inner">
@@ -28,5 +37,6 @@
   </div>
 </div>
 {% endfor %}
+    </div>
 </body>
 </html>
