--- a/templates/menu.html
+++ b/templates/menu.html
@@ -7,17 +7,16 @@
 </head>
   <body>
     <header>
-      <div class="container">
-        <h1 class="main_title">LONGBOW</h1>
-        <h2 class="logo">Menu</h2>
-          <ul class="menu">
-              <li><a href="{{ url_for('system_report') }}">System Report</a></li>
-              <li><a href="{{ url_for('login') }}">Login</a></li>
-              <li><a href="{{ url_for('characters') }}">Characters</a></li>
-              <li><a href="{{ url_for('systems') }}">Systems</a></li>
-              <li><a href="{{ url_for('report_viewer') }}">Reports</a></li>
-          </ul>
+      <div class="navbar">
+              <a href="{{ url_for('system_report') }}">System Report</a>
+              <a href="{{ url_for('login') }}">Login</a>
+              <a href="{{ url_for('characters') }}">Characters</a>
+              <a href="{{ url_for('systems') }}">Systems</a>
+              <a href="{{ url_for('report_viewer') }}">Reports</a>
       </div>
     </header>
+        <div class="main">
+            <h1 class="main_title">LONGBOW</h1>
+        </div>
   </body>
 </html>
