--- a/templates/systems.html
+++ b/templates/systems.html
@@ -6,12 +6,22 @@
     <title>Systems</title>
 </head>
     <body>
-    <a href="{{ url_for('index') }}">Menu</a>
-    <h1>Systems</h1>
-    <ul class="menu">
-        {%- for system in system_list %}
-            <li><a href="{{ url_for('system',name = system["name"]) }}">{{system["name"]}}</a></li>
-        {% endfor %}
-    </ul>
+    <header>
+      <div class="navbar">
+              <a href="{{ url_for('menu') }}">Menu</a>
+              <a href="{{ url_for('login') }}">Login</a>
+              <a href="{{ url_for('characters') }}">Characters</a>
+              <a href="{{ url_for('system_report') }}">System Report</a>
+              <a href="{{ url_for('report_viewer') }}">Reports</a>
+      </div>
+    </header>
+        <div class = "main">
+            <h1>Systems</h1>
+            <ul class="menu">
+                {%- for system in system_list %}
+                    <li><a href="{{ url_for('system',name = system["name"]) }}">{{system["name"]}}</a></li>
+                {% endfor %}
+            </ul>
+        </div>
     </body>
 </html>
