--- a/templates/view_system_reports.html
+++ b/templates/view_system_reports.html
@@ -6,17 +6,27 @@
         <title>System Reports</title>
     </head>
     <body>
-    <a href="{{ url_for('index') }}">Menu</a>
-    <h1>System Report</h1>
-        <ul class="menu">
-            {%- for report in reports %}
-                <div class="dropdown">
-                    <li><a href="{{ url_for('report',id = report["_id"]) }}">{{report["system_name"]}} at {{ report["time"] }}</a></li>
-                    <div class="dropdown-content">
-                        <p>{{report["player_ids"]|length}} players in system</p>
+    <header>
+      <div class="navbar">
+              <a href="{{ url_for('menu') }}">Menu</a>
+              <a href="{{ url_for('login') }}">Login</a>
+              <a href="{{ url_for('characters') }}">Characters</a>
+              <a href="{{ url_for('systems') }}">Systems</a>
+              <a href="{{ url_for('system_report') }}">System Report</a>
+      </div>
+    </header>
+        <div class="main">
+        <h1>System Report</h1>
+            <ul class="menu">
+                {%- for report in reports %}
+                    <div class="dropdown">
+                        <li><a href="{{ url_for('report',id = report["_id"]) }}">{{report["system_name"]}} at {{ report["time"] }}</a></li>
+                        <div class="dropdown-content">
+                            <p>{{report["player_ids"]|length}} players in system</p>
+                        </div>
                     </div>
-                </div>
-            {% endfor %}
-        </ul>
+                {% endfor %}
+            </ul>
+    </div>
     </body>
 </html>
