--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -24,6 +24,24 @@ li a:hover {
   color: red;
   transition: all 0.25s ease;
 }
+.flyout-button{
+  background-color: #aaaaaa;
+  display: block;
+  color: #000;
+  padding: 2.5% 16px;
+  height: 15%;
+  width: 224px;
+  text-decoration: none;
+}
+
+.flyout-button:hover{
+  background-color: #555;
+  padding: 2.5% 16px;
+  height: 15%;
+  width: 224px;
+  color: red;
+  transition: all 0.25s ease;
+}
 
 .dropdown {
   position: relative;
@@ -70,6 +88,23 @@ li a:hover {
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
+.flip-card:hover .flip-card-flyout {
+  transform: translateX(256px) translateY(-175px);
+  display: block;
+  background-color: #aaaaaa;
+  z-index: 1001;
+  transition: transform 0.5s;
+  transition-delay: .8s;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.flip-card-flyout {
+  display: none;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  background-color: #aaaaaa;
+}
+
 
 .flip-card-front, .flip-card-back {
   position: absolute;
@@ -96,6 +131,7 @@ li a:hover {
 .container {
   position: relative;
   text-align: center;
+  background-color: #aaaaaa;
   color: white;
 }
 .centered {
