--- a/templates/system.html
+++ b/templates/system.html
@@ -19,12 +19,12 @@
 <div class="main">
     <h1>{{ system["name"] }}</h1>
     <ul>
-        <li><a href="https://zkillboard.com/system/{{ system["system_id"] }}/">zKill</a></li>
+        <li><a href="https://zkillboard.com/system/{{ system["system_id"] }}/" target="_blank" rel="noreferrer noopener">zKill</a></li>
     </ul>
     <h2>Players Seen</h2>
     <ul>
         {% for player in system["common_players"] %}
-                <li><a href="{{ url_for('character',name = player) }}">{{ player }}:{{ system["common_players"][player] }}</a></li>
+                <li><a href="{{ url_for('character',name = player) }}" target="_blank" rel="noreferrer noopener">{{ player }}:{{ system["common_players"][player] }} </a></li>
         {% endfor %}
     </ul>
     <hr class="rounded">
