--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -139,6 +139,7 @@ li a:hover {
   top: 75%;
   left: 50%;
   transform: translate(-50%, -50%);
+  text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
 }
 input[type=text]{
   background-color: #ffffff;
@@ -204,6 +205,7 @@ textarea:focus {
 
 .main {
   margin-top: 50px;
+  padding-right: 20px;
 }
 
 .bottom-left {
@@ -217,3 +219,18 @@ textarea:focus {
   bottom: 0px;
   right: 0px;
 }
+
+.character-info{
+  display: none;
+  bottom: 50%;
+  right: 50%;
+  position: fixed;
+  font-size: 5vw;
+}
+
+.flip-card:hover .character-info{
+  display: none;
+  color: red;
+  background-color: #aaaaaa;
+}
+
